--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
     <div class="l-wrap">
       <div id="root"></div>
-      <div class="container-fluid">
+      <div class="container-fluid" id="vaccine-cont">
         <div class="container">
           <div class="row my-3">
             <div class="col-12 col-md-6">
@@ -168,6 +168,8 @@
       $(document).ready(function() {
         if( location.pathname != '/' ) {
           $('#vaccine-cont').css('display', 'none');
+          $('#vaccine-advice').css('display', 'none');
+          $('#vaccine-status').css('display', 'none');
         }
       });
     </script>
